Fix portfolio cards in mobile version. Small layout changes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Arthur Xavier</title>
 
     <link href="css/index.css" rel="stylesheet" type="text/css" />
+    <link href="css/card.css" rel="stylesheet" type="text/css" />
     <link href="css/progress-bar.css" rel="stylesheet" type="text/css" />
     <link href="//fonts.googleapis.com/css?family=Roboto:500,400,100,300" rel="stylesheet" type="text/css" />
 
@@ -277,7 +278,7 @@
         </div>
         <div class="center">
           <h4>ITALIAN</h4>
-          <div class="progress-bar" percent="0.25" style="float: left">
+          <div class="progress-bar" percent="0.2" style="float: left">
             <div class="progress"></div>
           </div>
           <span>A1</span>
@@ -304,7 +305,7 @@
           </div>
           <div class="bottom">
             <em>Dec 2014</em>
-            <p>HTML5 personal website and online résumé developed in a day.</p>
+            <p>HTML5 personal website and online résumé.</p>
           </div>
         </div>
 
@@ -344,7 +345,7 @@
           </div>
           <div class="bottom">
             <em>Oct 2013</em>
-            <p>Personal website for a elementary school student's project.</p>
+            <p>Personal website for an elementary school student's project.</p>
           </div>
         </div>
       </div>
@@ -357,6 +358,9 @@
           <td><a href="https://www.facebook.com/arthur.xavierx"><svg><use xlink:href="#icon-facebook"></use></svg></a></td>
           <td><a href=""><svg><use xlink:href="#icon-linkedin"></use></svg></a></td>
           <td><a href="https://github.com/arthur-xavier/"><svg><use xlink:href="#icon-github"></use></svg></a></td>
+        </tr>
+        <tr>
+          <td colspan="4" align="center"><small>&copy;2014 Arthur Xavier - All rights reserved</small></td>
         </tr>
       </table>
     </footer>
