Fix vertical dots height and add hyperlink to cards

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="container small center">
         <h2>education</h2>
 
-        <div class="card shadow">
+        <div class="card shadow" href="http://www.tu-dortmund.de">
           <div class="top layout" style="background-image: url(img/education/tu-dortmund.jpg)">
             <h3 class="bottom">TU Dortmund</h3>
           </div>
@@ -83,7 +83,7 @@
 
         <div class="vertical-dots center"></div>
 
-        <div class="card shadow">
+        <div class="card shadow" href="http://www.ufmg.br">
           <div class="top layout" style="background-image: url(img/education/ufmg.jpg)">
             <h3 class="bottom small">Universidade Federal de Minas Gerais</h3>
           </div>
@@ -95,7 +95,7 @@
 
         <div class="vertical-dots center"></div>
 
-        <div class="card shadow">
+        <div class="card shadow" href="http://www.cefetmg.br">
           <div class="top layout" style="background-image: url(img/education/cefet-mg.jpg)">
             <h3 class="bottom small">CEFET-MG</h3>
           </div>
@@ -125,7 +125,7 @@
 
         <div class="vertical-dots center"></div>
 
-        <div class="card shadow">
+        <div class="card shadow" href="https://github.com/arthur-xavier/modelr">
           <div class="top layout" style="background-image: url(img/experience/modelr.png)">
             <h3 class="bottom small">Scholarship Holder</h3>
           </div>
@@ -138,7 +138,7 @@
 
         <div class="vertical-dots center"></div>
 
-        <div class="card shadow">
+        <div class="card shadow" href="http://homepages.dcc.ufmg.br/~erickson/publications/drewsjr_icpr2014.pdf">
           <div class="top layout" style="background-image: url(img/experience/underwater.png)">
             <h3 class="bottom small">Scholarship Holder</h3>
           </div>
@@ -193,10 +193,10 @@
         </div>
         <div class="center">
           <h4>Java</h4>
-          <div class="progress-bar" percent="0.6" style="float: left">
+          <div class="progress-bar" percent="0.5" style="float: left">
             <div class="progress"></div>
           </div>
-          <span>60%</span>
+          <span>50%</span>
         </div>
         <div class="center">
           <h4>Haskell</h4>
@@ -211,10 +211,10 @@
         <h2 class="small">personal skills</h2>
         <div class="center">
           <h4>LEARNING</h4>
-          <div class="progress-bar" percent="0.9" style="float: left">
+          <div class="progress-bar" percent="1.0" style="float: left">
             <div class="progress"></div>
           </div>
-          <span>90%</span>
+          <span>100%</span>
         </div>
         <div class="center">
           <h4>CREATIVITY</h4>
@@ -225,17 +225,17 @@
         </div>
         <div class="center">
           <h4>INDEPENDENCY</h4>
+          <div class="progress-bar" percent="0.8" style="float: left">
+            <div class="progress"></div>
+          </div>
+          <span>80%</span>
+        </div>
+        <div class="center">
+          <h4>DETERMINATION</h4>
           <div class="progress-bar" percent="0.75" style="float: left">
             <div class="progress"></div>
           </div>
           <span>75%</span>
-        </div>
-        <div class="center">
-          <h4>DETERMINATION</h4>
-          <div class="progress-bar" percent="0.6" style="float: left">
-            <div class="progress"></div>
-          </div>
-          <span>60%</span>
         </div>
       </div>
 
