Add Polymer to technical skills

--- a/index.html
+++ b/index.html
@@ -205,6 +205,13 @@
           </div>
           <span>50%</span>
         </div>
+        <div class="center">
+          <h4>Polymer</h4>
+          <div class="progress-bar" percent="0.5" style="float: left">
+            <div class="progress"></div>
+          </div>
+          <span>50%</span>
+        </div>
       </div>
 
       <div class="container center small">
