Text correction and visual changes in skills

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <img class="center avatar" src="img/avatar.jpg" />
         <p>Hello! My name is <strong>Arthur Xavier</strong>, developer, student and a little bit of a musician.</p>
         <p>I'm a 19 years old Computer Science student at the Federal University of Minas Gerais, Brazil, currently studying one year abroad in Germany at the Technische Universität Dortmund.</p>
-        <p>Excellence and passion are the keys. Being able to change other peoples lives and make difference is what drives me. As an active self-taught developer for many years I can say that coding is one of the greatest passions of my life, next to music and languages.</p>
+        <p>Excellence and passion are the keys. Being able to change other peoples lives and make the difference is what drives me. As an active self-taught developer for many years I can say that coding is one of the greatest passions of my life, next to music and languages.</p>
       </div>
     </section>
 
@@ -264,31 +264,31 @@
         <h2 class="small">personal skills</h2>
         <div class="center">
           <h4>LEARNING</h4>
-          <div class="progress-bar" percent="1.0" style="float: left">
+          <div class="progress-bar center" percent="1.0">
             <div class="progress"></div>
           </div>
-          <span>100%</span>
+          <span></span>
         </div>
         <div class="center">
           <h4>CREATIVITY</h4>
-          <div class="progress-bar" percent="0.9" style="float: left">
+          <div class="progress-bar center" percent="0.9">
             <div class="progress"></div>
           </div>
-          <span>90%</span>
-        </div>
-        <div class="center">
-          <h4>INDEPENDENCY</h4>
-          <div class="progress-bar" percent="0.8" style="float: left">
-            <div class="progress"></div>
-          </div>
-          <span>80%</span>
+          <span></span>
         </div>
         <div class="center">
           <h4>DETERMINATION</h4>
-          <div class="progress-bar" percent="0.75" style="float: left">
+          <div class="progress-bar center" percent="0.85">
             <div class="progress"></div>
           </div>
-          <span>75%</span>
+          <span></span>
+        </div>
+        <div class="center">
+          <h4>INDEPENDENCY</h4>
+          <div class="progress-bar center" percent="0.8">
+            <div class="progress"></div>
+          </div>
+          <span></span>
         </div>
       </div>
 
@@ -306,7 +306,7 @@
           <div class="progress-bar" percent="0.95" style="float: left">
             <div class="progress"></div>
           </div>
-          <span>C2</span>
+          <span>C1</span>
         </div>
         <div class="center">
           <h4>GERMAN</h4>
