Corrects text and skilss. Small layout changes

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           </div>
           <div class="bottom">
             <em>May 2013 - Dec 2017 (Expected)</em>
-            <p>Bachelor in Computer Science</p>
+            <p>Bachelor in Computer Science.</p>
           </div>
         </div>
 
@@ -217,14 +217,14 @@
       <div class="container center small" style="display: inline-block">
         <h2 class="small">technical skills</h2>
         <div class="center">
-          <h4>JAVASCRIPT &amp; NODE.JS</h4>
+          <h4>JAVASCRIPT / NODE.JS</h4>
           <div class="progress-bar" percent="0.9" style="float: left">
             <div class="progress"></div>
           </div>
           <span>90%</span>
         </div>
         <div class="center">
-          <h4>HTML5/CSS3</h4>
+          <h4>HTML5 / CSS3</h4>
           <div class="progress-bar" percent="0.8" style="float: left">
             <div class="progress"></div>
           </div>
@@ -239,10 +239,10 @@
         </div>
         <div class="center">
           <h4>Java</h4>
-          <div class="progress-bar" percent="0.5" style="float: left">
+          <div class="progress-bar" percent="0.7" style="float: left">
             <div class="progress"></div>
           </div>
-          <span>50%</span>
+          <span>70%</span>
         </div>
         <div class="center">
           <h4>Haskell</h4>
@@ -349,7 +349,7 @@
     <!-- PORTFOLIO -->
     <section id="portfolio">
       <div class="toolbar"></div>
-      <div class="container center">
+      <div class="container center" style="text-align: center">
         <h2>portfolio</h2>
 
         <div class="card center shadow small" href="/">
@@ -362,13 +362,13 @@
           </div>
         </div>
 
-        <div class="card center shadow small" href="https://github.com/arthur-xavier/diamond.js">
+        <div class="card center shadow small" href="https://www.npmjs.com/package/diamond.js">
           <div class="top layout" style="background-image: url(img/portfolio/coffeescript.jpg)">
             <h3 class="bottom small">diamond.js</h3>
           </div>
           <div class="bottom">
             <em>Aug 2014 - Now</em>
-            <p>MVC web framework for node.js written in CoffeeScript</p>
+            <p>MVC web framework for node.js written in CoffeeScript.</p>
           </div>
         </div>
 
