Change diamond.js thumbnail

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         </div>
 
         <div class="card center shadow small" href="https://www.npmjs.com/package/diamond.js">
-          <div class="top layout" style="background-image: url(img/portfolio/coffeescript.jpg)">
+          <div class="top layout" style="background: url(img/portfolio/diamond.jpg) left top">
             <h3 class="bottom small">diamond.js</h3>
           </div>
           <div class="bottom">
