Removed DIIZZ and changed a few skills

--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
       <div class="container small center">
         <h2>experience</h2>
 
+        <!--
+        projeto descontinuado
         <div class="card shadow">
           <div class="top layout" style="background-image: url(img/experience/diizz.png)">
             <h3 class="bottom small">Web Developer</h3>
@@ -168,6 +170,7 @@
             <p>Development and management of a mobile web application in a startup company.</p>
           </div>
         </div>
+        -->
 
         <div class="vertical-dots center"></div>
 
@@ -225,17 +228,17 @@
         </div>
         <div class="center">
           <h4>HTML5 / CSS3</h4>
+          <div class="progress-bar" percent="0.85" style="float: left">
+            <div class="progress"></div>
+          </div>
+          <span>85%</span>
+        </div>
+        <div class="center">
+          <h4>C/C++</h4>
           <div class="progress-bar" percent="0.8" style="float: left">
             <div class="progress"></div>
           </div>
           <span>80%</span>
-        </div>
-        <div class="center">
-          <h4>C/C++</h4>
-          <div class="progress-bar" percent="0.75" style="float: left">
-            <div class="progress"></div>
-          </div>
-          <span>75%</span>
         </div>
         <div class="center">
           <h4>Java</h4>
@@ -246,17 +249,10 @@
         </div>
         <div class="center">
           <h4>Haskell</h4>
-          <div class="progress-bar" percent="0.5" style="float: left">
+          <div class="progress-bar" percent="0.6" style="float: left">
             <div class="progress"></div>
           </div>
-          <span>50%</span>
-        </div>
-        <div class="center">
-          <h4>Polymer</h4>
-          <div class="progress-bar" percent="0.5" style="float: left">
-            <div class="progress"></div>
-          </div>
-          <span>50%</span>
+          <span>60%</span>
         </div>
       </div>
 
@@ -285,7 +281,7 @@
         </div>
         <div class="center">
           <h4>INDEPENDENCY</h4>
-          <div class="progress-bar center" percent="0.85">
+          <div class="progress-bar center" percent="0.9">
             <div class="progress"></div>
           </div>
           <span></span>
