Minor updates: removed languages, linkedin icon and changed colors

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
       <div class="toolbar"></div>
       <div class="container center">
         <h2>about</h2>
-        <img class="center avatar" src="img/avatar.jpg" />
+        <img class="center avatar" src="img/avatar2.jpg" />
         <p>Hello! My name is <strong>Arthur Xavier</strong>, developer, student and a little bit of a musician.</p>
-        <p>I'm a 19 years old Computer Science student at the Federal University of Minas Gerais, Brazil, currently studying one year abroad in Germany at the Technische Universität Dortmund.</p>
-        <p>Excellence and passion are the keys. Being able to change other peoples lives and make the difference is what drives me. As an active self-taught developer for many years I can say that coding is one of the greatest passions of my life, next to music and languages.</p>
+        <p>I'm a 20 years old Computer Science student at the Federal University of Minas Gerais, Brazil.</p>
+        <p>Excellence and passion are the keys. Being able to change other peoples lives and make the difference is what drives me. As an active self-taught developer for many years I can say that coding is one of the greatest passions I have in my life, next to music and languages.</p>
       </div>
     </section>
 
@@ -221,35 +221,35 @@
         <h2 class="small">technical skills</h2>
         <div class="center">
           <h4>JAVASCRIPT / NODE.JS</h4>
-          <div class="progress-bar" percent="0.9" style="float: left">
+          <div class="progress-bar" data-percent="0.9" style="float: left">
             <div class="progress"></div>
           </div>
           <span>90%</span>
         </div>
         <div class="center">
           <h4>HTML5 / CSS3</h4>
-          <div class="progress-bar" percent="0.85" style="float: left">
+          <div class="progress-bar" data-percent="0.85" style="float: left">
             <div class="progress"></div>
           </div>
           <span>85%</span>
         </div>
         <div class="center">
           <h4>C/C++</h4>
-          <div class="progress-bar" percent="0.8" style="float: left">
+          <div class="progress-bar" data-percent="0.8" style="float: left">
             <div class="progress"></div>
           </div>
           <span>80%</span>
         </div>
         <div class="center">
           <h4>Java</h4>
-          <div class="progress-bar" percent="0.7" style="float: left">
+          <div class="progress-bar" data-percent="0.7" style="float: left">
             <div class="progress"></div>
           </div>
           <span>70%</span>
         </div>
         <div class="center">
           <h4>Haskell</h4>
-          <div class="progress-bar" percent="0.6" style="float: left">
+          <div class="progress-bar" data-percent="0.6" style="float: left">
             <div class="progress"></div>
           </div>
           <span>60%</span>
@@ -260,28 +260,28 @@
         <h2 class="small">personal skills</h2>
         <div class="center">
           <h4>LEARNING</h4>
-          <div class="progress-bar center" percent="1.0">
+          <div class="progress-bar center" data-percent="1.0">
             <div class="progress"></div>
           </div>
           <span></span>
         </div>
         <div class="center">
           <h4>CREATIVITY</h4>
-          <div class="progress-bar center" percent="0.95">
+          <div class="progress-bar center" data-percent="0.95">
             <div class="progress"></div>
           </div>
           <span></span>
         </div>
         <div class="center">
           <h4>DETERMINATION</h4>
-          <div class="progress-bar center" percent="0.9">
+          <div class="progress-bar center" data-percent="0.9">
             <div class="progress"></div>
           </div>
           <span></span>
         </div>
         <div class="center">
           <h4>INDEPENDENCY</h4>
-          <div class="progress-bar center" percent="0.9">
+          <div class="progress-bar center" data-percent="0.9">
             <div class="progress"></div>
           </div>
           <span></span>
@@ -292,53 +292,53 @@
         <h2 class="small">languages</h2>
         <div class="center">
           <h4>PORTUGUESE</h4>
-          <div class="progress-bar" percent="1" style="float: left">
+          <div class="progress-bar" data-percent="1" style="float: left">
             <div class="progress"></div>
           </div>
           <span>C2</span>
         </div>
         <div class="center">
           <h4>ENGLISH</h4>
-          <div class="progress-bar" percent="0.95" style="float: left">
+          <div class="progress-bar" data-percent="0.95" style="float: left">
             <div class="progress"></div>
           </div>
           <span>C1</span>
         </div>
         <div class="center">
           <h4>GERMAN</h4>
-          <div class="progress-bar" percent="0.9" style="float: left">
+          <div class="progress-bar" data-percent="0.9" style="float: left">
             <div class="progress"></div>
           </div>
           <span>C1</span>
         </div>
         <div class="center">
           <h4>FRENCH</h4>
-          <div class="progress-bar" percent="0.85" style="float: left">
+          <div class="progress-bar" data-percent="0.85" style="float: left">
             <div class="progress"></div>
           </div>
           <span>B2</span>
         </div>
         <div class="center">
           <h4>IRISH (GAEILGE)</h4>
-          <div class="progress-bar" percent="0.35" style="float: left">
+          <div class="progress-bar" data-percent="0.35" style="float: left">
             <div class="progress"></div>
           </div>
           <span>A2</span>
         </div>
-        <div class="center">
+        <!--<div class="center">
           <h4>ITALIAN</h4>
-          <div class="progress-bar" percent="0.2" style="float: left">
+          <div class="progress-bar" data-percent="0.2" style="float: left">
             <div class="progress"></div>
           </div>
           <span>A1</span>
         </div>
         <div class="center">
           <h4>CHINESE</h4>
-          <div class="progress-bar" percent="0.15" style="float: left">
+          <div class="progress-bar" data-percent="0.15" style="float: left">
             <div class="progress"></div>
           </div>
           <span>A1</span>
-        </div>
+        </div>-->
       </div>
     </section>
 
@@ -406,11 +406,11 @@
         <tr>
           <td><a href="mailto:arthur.xavierx@gmail.com"><svg><use xlink:href="#icon-mail"></use></svg></a></td>
           <td><a href="https://www.facebook.com/arthur.xavierx"><svg><use xlink:href="#icon-facebook"></use></svg></a></td>
-          <td><a href=""><svg><use xlink:href="#icon-linkedin"></use></svg></a></td>
+          <!--<td><a href=""><svg><use xlink:href="#icon-linkedin"></use></svg></a></td>-->
           <td><a href="https://github.com/arthur-xavier/"><svg><use xlink:href="#icon-github"></use></svg></a></td>
         </tr>
         <tr>
-          <td colspan="4" align="center"><small>&copy;2014 Arthur Xavier - All rights reserved</small></td>
+          <td colspan="4" align="center"><small>&copy;2015 Arthur Xavier - All rights reserved</small></td>
         </tr>
       </table>
     </footer>
