Changes to the #about text and minor aesthetical changes

--- a/index.html
+++ b/index.html
@@ -106,8 +106,9 @@
         <h2>about</h2>
         <img class="center avatar" src="img/avatar2.jpg" />
         <p>Hello! My name is <strong>Arthur Xavier</strong>, developer, student and a little bit of a musician.</p>
-        <p>I'm a 20 years old Computer Science student at the Federal University of Minas Gerais, Brazil.</p>
+        <p>I am a 20 years old Computer Science student at the Federal University of Minas Gerais, Brazil.</p>
         <p>Excellence and passion are the keys. Being able to change other peoples lives and make the difference is what drives me. As an active self-taught developer for many years I can say that coding is one of the greatest passions I have in my life, next to music and languages.</p>
+        <p>I love getting to know or working with incoming and emerging technologies and trends. Node.js, the new hype, is my favourite. I'm deeply interested in functional programming and all its capabilities, foremost, the ability to write simple yet powerful code, which one can easily verify and reason about.</p>
       </div>
     </section>
 
@@ -158,21 +159,6 @@
       <div class="toolbar"></div>
       <div class="container small center">
         <h2>experience</h2>
-
-        <!--
-        projeto descontinuado
-        <div class="card shadow">
-          <div class="top layout" style="background-image: url(img/experience/diizz.png)">
-            <h3 class="bottom small">Web Developer</h3>
-          </div>
-          <div class="bottom">
-            <em>Jun 2013 - Now</em>
-            <p>Development and management of a mobile web application in a startup company.</p>
-          </div>
-        </div>
-
-        <div class="vertical-dots center"></div>
-        -->
 
         <div class="card shadow" href="https://github.com/arthur-xavier/modelr">
           <div class="top layout" style="background-image: url(img/experience/modelr.png)">
