--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
+    <meta name="theme-color" content="#FAFAFA">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-touch-fullscreen" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" >
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <title>Arthur Xavier</title>
 
