--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
     <link href="css/typography.css" rel="stylesheet" type="text/css" />
     <link href="css/progress-bar.css" rel="stylesheet" type="text/css" />
     <link href="//fonts.googleapis.com/css?family=Roboto:500,400,100,300" rel="stylesheet" type="text/css" />
-
-    <script src="//code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
-    <script src="js/index.js" type="text/javascript"></script>
   </head>
 
   <body>
@@ -68,42 +65,48 @@
       <div class="container center">
         <ul>
           <li>
-            <table href="http://www.tu-dortmund.de/">
-              <tr>
-                <td><div class="round" style="background-image: url(img/education/tu-dortmund.jpg)"></div></td>
-                <td>
-                  <h3>TU Dortmund</h3>
-                  <em>Sep 2014 - Sep 2015</em>
-                  <p>Exchange student in Computer Science (Informatik) by the brazilian exchange program <abbr title="Ciência sem Fronteiras">Ciência sem Fronteiras</abbr>.</p>
-                </td>
-              </tr>
-            </table>
+            <a href="http://www.tu-dortmund.de/">
+              <table>
+                <tr>
+                  <td><div class="round" style="background-image: url(img/education/tu-dortmund.jpg)"></div></td>
+                  <td>
+                    <h3>TU Dortmund</h3>
+                    <em>Sep 2014 - Sep 2015</em>
+                    <p>Exchange student in Computer Science (Informatik) by the brazilian exchange program <abbr title="Ciência sem Fronteiras">Ciência sem Fronteiras</abbr>.</p>
+                  </td>
+                </tr>
+              </table>
+            </a>
           </li>
           <li><div class="vertical-dots"></div></li>
           <li>
-            <table href="https://www.ufmg.br/">
-              <tr>
-                <td><div class="round" style="background-image: url(img/education/ufmg.jpg)"></div></td>
-                <td>
-                  <h3>Universidade Federal de Minas Gerais</h3>
-                  <em>May 2013 - Dec 2017 (Expected)</em>
-                  <p>Bachelor study in Computer Science.</p>
-                </td>
-              </tr>
-            </table>
+            <a href="https://www.ufmg.br/">
+              <table>
+                <tr>
+                  <td><div class="round" style="background-image: url(img/education/ufmg.jpg)"></div></td>
+                  <td>
+                    <h3>Universidade Federal de Minas Gerais</h3>
+                    <em>May 2013 - Dec 2017 (Expected)</em>
+                    <p>Bachelor study in Computer Science.</p>
+                  </td>
+                </tr>
+              </table>
+            </a>
           </li>
           <li><div class="vertical-dots"></div></li>
           <li>
-            <table href="http://www.cefetmg.br/">
-              <tr>
-                <td><div class="round" style="background-image: url(img/education/cefet-mg.jpg)"></div></td>
-                <td>
-                  <h3>CEFET-MG</h3>
-                  <em>May 2010 - Dec 2012</em>
-                  <p>Technical High School in Computer Science.</p>
-                </td>
-              </tr>
-            </table>
+            <a href="http://www.cefetmg.br/">
+              <table>
+                <tr>
+                  <td><div class="round" style="background-image: url(img/education/cefet-mg.jpg)"></div></td>
+                  <td>
+                    <h3>CEFET-MG</h3>
+                    <em>May 2010 - Dec 2012</em>
+                    <p>Technical High School in Computer Science.</p>
+                  </td>
+                </tr>
+              </table>
+            </a>
           </li>
         </ul>
       </div>
@@ -120,35 +123,39 @@
       <div class="container center">
         <ul>
           <li>
-            <table href="https://github.com/arthur-xavier/modelr">
-              <tr>
-                <td><div class="round" style="background-image: url(img/experience/modelr.png)"></div></td>
-                <td>
-                  <h3>Scholarship Holder</h3>
-                  <em>Mar 2013 - Jun 2013</em>
-                  <p>Development of a prototype mobile application for 3D model generation out of 2D sketches. Student of Professor Erickson Nascimento at the Federal University of Minas Gerais (UFMG).</p>
-                  <p>Mobile implementation of the methods described in the paper <em>Utilização de arte conceitual para geração de modelos 3D</em><small> - Renato Dias Viana*, Renato Antonio Celso Ferreira</small></p>
-                </td>
-              </tr>
-            </table>
+            <a href="https://github.com/arthur-xavier/modelr">
+              <table>
+                <tr>
+                  <td><div class="round" style="background-image: url(img/experience/modelr.png)"></div></td>
+                  <td>
+                    <h3>Scholarship Holder</h3>
+                    <em>Mar 2013 - Jun 2013</em>
+                    <p>Development of a prototype mobile application for 3D model generation out of 2D sketches. Student of Professor Erickson Nascimento at the Federal University of Minas Gerais (UFMG).</p>
+                    <p>Mobile implementation of the methods described in the paper <em>Utilização de arte conceitual para geração de modelos 3D</em><small> - Renato Dias Viana*, Renato Antonio Celso Ferreira</small></p>
+                  </td>
+                </tr>
+              </table>
+            </a>
           </li>
           <li><div class="vertical-dots"></div></li>
           <li>
-            <table href="http://homepages.dcc.ufmg.br/~erickson/publications/drewsjr_icpr2014.pdf">
-              <tr>
-                <td><div class="round" style="background-image: url(img/experience/underwater.png)"></div></td>
-                <td>
-                  <h3>Scholarship Holder</h4>
-                  <em>Oct 2012 - Mar 2013</em>
-                  <p>Research in Computer Graphics about Underwater Rendering. Student of Professor Erickson Nascimento at the Federal University of Minas Gerais (UFMG).</p>
-                  <p>
-                    Paper accepted in the ICPR 2014 Conference:
-                    <br />
-                    <em>Generalized Optical Flow Model for Scattering Media</em><small> - Paulo Drews*, Erickson Nascimento, Arthur Xavier, Mario Montenegro Campos Campos</small>
-                  </p>
-                </td>
-              </tr>
-            </table>
+            <a href="http://homepages.dcc.ufmg.br/~erickson/publications/drewsjr_icpr2014.pdf">
+              <table>
+                <tr>
+                  <td><div class="round" style="background-image: url(img/experience/underwater.png)"></div></td>
+                  <td>
+                    <h3>Scholarship Holder</h4>
+                    <em>Oct 2012 - Mar 2013</em>
+                    <p>Research in Computer Graphics about Underwater Rendering. Student of Professor Erickson Nascimento at the Federal University of Minas Gerais (UFMG).</p>
+                    <p>
+                      Paper accepted in the ICPR 2014 Conference:
+                      <br />
+                      <em>Generalized Optical Flow Model for Scattering Media</em><small> - Paulo Drews*, Erickson Nascimento, Arthur Xavier, Mario Montenegro Campos Campos</small>
+                    </p>
+                  </td>
+                </tr>
+              </table>
+            </a>
           </li>
           <li><div class="vertical-dots"></div></li>
           <li>
@@ -301,68 +308,78 @@
 
         <ul>
           <li>
-            <table href="/">
-              <tr>
-                <td><div class="round" style="background-image: url(img/portfolio/arthurxavier.jpg)"></div></td>
-                <td>
-                  <h3>Personal Website</h3>
-                  <em>Dec 2014</em>
-                  <p>HTML5 personal website and online résumé.</p>
-                </td>
-              </tr>
-            </table>
+            <a href="/">
+              <table>
+                <tr>
+                  <td><div class="round" style="background-image: url(img/portfolio/arthurxavier.jpg)"></div></td>
+                  <td>
+                    <h3>Personal Website</h3>
+                    <em>Dec 2014</em>
+                    <p>HTML5 personal website and online résumé.</p>
+                  </td>
+                </tr>
+              </table>
+            </a>
           </li>
 
           <li>
-            <table href="https://www.npmjs.com/package/diamond.js">
-              <tr>
-                <td><div class="round" style="background-image: url(img/portfolio/diamond.jpg)"></div></td>
-                <td>
-                  <h3>diamond.js</h4>
-                  <em>Aug 2014</em>
-                  <p>MVC web framework for node.js written in CoffeeScript.</p>
-                </td>
-              </tr>
-            </table>
+            <a href="https://www.npmjs.com/package/diamond.js">
+              <table>
+                <tr>
+                  <td><div class="round" style="background-image: url(img/portfolio/diamond.jpg)"></div></td>
+                  <td>
+                    <h3>diamond.js</h4>
+                    <em>Aug 2014</em>
+                    <p>MVC web framework for node.js written in CoffeeScript.</p>
+                  </td>
+                </tr>
+              </table>
+            </a>
           </li>
 
           <li>
-            <table href="http://www.dcc.ufmg.br/~xavier/gravity">
-              <tr>
-                <td><div class="round" style="background-image: url(img/portfolio/gravity.jpg)"></div></td>
-                <td>
-                  <h3>Gravity</h4>
-                  <em>May 2014</em>
-                  <p>Simple yet awesome HTML5 physics-based game.</p>
-                </td>
-              </tr>
-            </table>
+            <a href="http://www.dcc.ufmg.br/~xavier/gravity">
+              <table>
+                <tr>
+                  <td><div class="round" style="background-image: url(img/portfolio/gravity.jpg)"></div></td>
+                  <td>
+                    <h3>Gravity</h4>
+                    <em>May 2014</em>
+                    <p>Simple yet awesome HTML5 physics-based game.</p>
+                  </td>
+                </tr>
+              </table>
+            </a>
           </li>
 
           <li>
-            <table href="https://github.com/arthur-xavier/modelr">
-              <tr>
-                <td><div class="round" style="background-image: url(img/portfolio/modelr.jpg)"></div></td>
-                <td>
-                  <h3>Modelr</h4>
-                  <em>Jun 2014</em>
-                  <p>Android application for automatic 3D model generation based on 2D sketches.</p>
-                </td>
-              </tr>
-            </table>
+            <a href="https://github.com/arthur-xavier/modelr">
+              <table>
+                <tr>
+                  <td><div class="round" style="background-image: url(img/portfolio/modelr.jpg)"></div></td>
+                  <td>
+                    <h3>Modelr</h4>
+                    <em>Jun 2014</em>
+                    <p>Android application for automatic 3D model generation based on 2D sketches.</p>
+                  </td>
+                </tr>
+              </table>
+            </a>
           </li>
 
           <li>
-            <table href="https://github.com/arthur-xavier/barbarizantes">
-              <tr>
-                <td><div class="round" style="background-image: url(img/portfolio/barbarizantes.jpg)"></div></td>
-                <td>
-                  <h3>Barbarizantes</h4>
-                  <em>Oct 2013</em>
-                  <p>Personal website for an elementary school student's project.</p>
-                </td>
-              </tr>
-            </table>
+            <a href="https://github.com/arthur-xavier/barbarizantes">
+              <table>
+                <tr>
+                  <td><div class="round" style="background-image: url(img/portfolio/barbarizantes.jpg)"></div></td>
+                  <td>
+                    <h3>Barbarizantes</h4>
+                    <em>Oct 2013</em>
+                    <p>Personal website for an elementary school student's project.</p>
+                  </td>
+                </tr>
+              </table>
+            </a>
           </li>
         </ul>
       </div>
@@ -371,30 +388,6 @@
     <!-- IcoMoon icons -->
     <svg display="none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
-    <symbol id="icon-home" viewBox="0 0 1024 1024">
-      <title>home</title>
-      <path class="path1" d="M1024 608l-192-192v-288h-128v160l-192-192-512 512v32h128v320h320v-192h128v192h320v-320h128z"></path>
-    </symbol>
-    <symbol id="icon-user" viewBox="0 0 1024 1024">
-      <title>user</title>
-      <path class="path1" d="M256 320c0-141.385 114.615-256 256-256s256 114.615 256 256c0 141.385-114.615 256-256 256s-256-114.615-256-256zM768 640h-512c-141.384 0-256 114.618-256 256v64h1024v-64c0-141.382-114.616-256-256-256z"></path>
-    </symbol>
-    <symbol id="icon-user2" viewBox="0 0 1024 1024">
-      <title>user2</title>
-      <path class="path1" d="M320 192c0-106.039 85.961-192 192-192s192 85.961 192 192c0 106.039-85.961 192-192 192s-192-85.961-192-192zM768.078 448h-35.424l-199.104 404.244 74.45-372.244-96-96-96 96 74.45 372.244-199.102-404.244h-35.424c-127.924 0-127.924 85.986-127.924 192v320h768v-320c0-106.014 0-192-127.922-192z"></path>
-    </symbol>
-    <symbol id="icon-bars" viewBox="0 0 1024 1024">
-      <title>bars</title>
-      <path class="path1" d="M0 832h1024v128h-1024zM128 576h128v192h-128zM320 320h128v448h-128zM512 512h128v256h-128zM704 128h128v640h-128z"></path>
-    </symbol>
-    <symbol id="icon-lab" viewBox="0 0 1024 1024">
-      <title>lab</title>
-      <path class="path1" d="M956.29 804.482l-316.29-527.024v-213.458h32c17.6 0 32-14.4 32-32s-14.4-32-32-32h-320c-17.6 0-32 14.4-32 32s14.4 32 32 32h32v213.458l-316.288 527.024c-72.442 120.734-16.512 219.518 124.288 219.518h640c140.8 0 196.73-98.784 124.29-219.518zM241.038 640l206.962-344.938v-231.062h128v231.062l206.964 344.938h-541.926z"></path>
-    </symbol>
-    <symbol id="icon-briefcase" viewBox="0 0 1024 1024">
-      <title>briefcase</title>
-      <path class="path1" d="M960 256h-256v-64c0-35.2-28.8-64-64-64h-256c-35.204 0-64 28.8-64 64v64h-256c-35.2 0-64 28.8-64 64v576c0 35.202 28.796 64 64 64h896c35.2 0 64-28.798 64-64v-576c0-35.2-28.8-64-64-64zM384 192.116c0.034-0.040 0.074-0.082 0.114-0.116h255.772c0.042 0.034 0.082 0.076 0.118 0.116v63.884h-256.004v-63.884zM960 512h-128v96c0 17.602-14.4 32-32 32h-64c-17.604 0-32-14.398-32-32v-96h-384v96c0 17.602-14.4 32-32 32h-64c-17.602 0-32-14.398-32-32v-96h-128v-64h896v64z"></path>
-    </symbol>
     <symbol id="icon-mail" viewBox="0 0 1024 1024">
       <title>mail</title>
       <path class="path1" d="M853.31 0h-682.62c-93.88 0-170.69 76.784-170.69 170.658v682.656c0 93.876 76.81 170.686 170.69 170.686h682.622c93.938 0 170.688-76.81 170.688-170.686v-682.656c0-93.874-76.75-170.658-170.69-170.658zM256 256h512c9.138 0 18.004 1.962 26.144 5.662l-282.144 329.168-282.144-329.17c8.14-3.696 17.006-5.66 26.144-5.66zM192 704v-384c0-1.34 0.056-2.672 0.14-4l187.664 218.94-185.598 185.6c-1.444-5.338-2.206-10.886-2.206-16.54zM768 768h-512c-5.654 0-11.202-0.762-16.54-2.206l182.118-182.118 90.422 105.496 90.424-105.494 182.116 182.118c-5.34 1.442-10.886 2.204-16.54 2.204zM832 704c0 5.654-0.762 11.2-2.206 16.54l-185.598-185.598 187.664-218.942c0.084 1.328 0.14 2.66 0.14 4v384z"></path>
@@ -406,10 +399,6 @@
     <symbol id="icon-github" viewBox="0 0 1024 1024">
       <title>github</title>
       <path class="path1" d="M0 556.41c0 46.398 4.34 88.38 13.022 125.934 8.678 37.554 20.696 70.184 36.052 97.892s34.884 52.078 58.586 73.108c23.7 21.032 49.406 38.224 77.112 51.576 27.706 13.35 59.336 24.198 94.888 32.546 35.552 8.346 71.856 14.188 108.91 17.528 37.054 3.338 77.78 5.006 122.178 5.006 44.732 0 85.628-1.668 122.68-5.006 37.054-3.34 73.442-9.184 109.16-17.528s67.512-19.192 95.388-32.546c27.876-13.354 53.746-30.544 77.616-51.576 23.87-21.030 43.566-45.404 59.086-73.108s27.622-60.336 36.302-97.892c8.68-37.556 13.020-79.536 13.020-125.934 0-82.788-27.708-154.394-83.118-214.816 3.004-8.012 5.758-17.108 8.262-27.29s4.84-24.702 7.010-43.564c2.17-18.862 1.336-40.642-2.504-65.346-3.838-24.704-10.932-49.906-21.284-75.612l-7.51-1.502c-5.342-1-14.106-0.75-26.29 0.752s-26.372 4.506-42.562 9.014c-16.19 4.506-37.054 13.186-62.592 26.038s-52.494 28.958-80.87 48.32c-48.736-13.352-115.668-20.030-200.792-20.030-84.792 0-151.556 6.678-200.294 20.030-28.376-19.362-55.5-35.468-81.37-48.32s-46.484-21.532-61.84-26.038c-15.354-4.508-29.71-7.428-43.062-8.764-13.354-1.336-21.784-1.752-25.288-1.252s-6.26 1.086-8.262 1.752c-10.348 25.706-17.442 50.906-21.28 75.612-3.838 24.704-4.674 46.486-2.504 65.346s4.508 33.382 7.010 43.564c2.504 10.182 5.258 19.278 8.262 27.29-55.414 60.422-83.122 132.026-83.122 214.816zM125.684 682.094c0-48.070 21.866-92.136 65.596-132.194 13.018-12.020 28.208-21.114 45.566-27.292 17.358-6.176 36.97-9.68 58.836-10.516 21.866-0.834 42.812-0.668 62.842 0.502 20.028 1.168 44.732 2.754 74.108 4.756 29.376 2.004 54.748 3.004 76.112 3.004 21.366 0 46.736-1 76.112-3.004 29.378-2.002 54.078-3.588 74.11-4.756 20.030-1.17 40.974-1.336 62.842-0.502 21.866 0.836 41.476 4.34 58.838 10.516 17.356 6.176 32.544 15.27 45.564 27.292 43.73 39.394 65.598 83.456 65.598 132.194 0 28.712-3.59 54.162-10.768 76.364-7.178 22.2-16.358 40.81-27.542 55.83s-26.704 27.79-46.568 38.306c-19.862 10.516-39.222 18.61-58.084 24.288-18.862 5.674-43.066 10.098-72.608 13.27-29.546 3.172-55.916 5.092-79.118 5.758-23.2 0.668-52.66 1.002-88.378 1.002s-65.178-0.334-88.378-1.002c-23.2-0.666-49.574-2.586-79.116-5.758s-53.744-7.596-72.606-13.27c-18.86-5.678-38.222-13.774-58.084-24.288s-35.386-23.282-46.568-38.306c-11.182-15.022-20.364-33.63-27.54-55.83-7.178-22.202-10.766-47.656-10.766-76.364zM640 672c0-53.019 28.654-96 64-96s64 42.981 64 96c0 53.019-28.654 96-64 96s-64-42.981-64-96zM256 672c0-53.019 28.654-96 64-96s64 42.981 64 96c0 53.019-28.654 96-64 96s-64-42.981-64-96z"></path>
-    </symbol>
-    <symbol id="icon-linkedin" viewBox="0 0 1024 1024">
-      <title>linkedin</title>
-      <path class="path1" d="M852 0h-680c-94.6 0-172 77.4-172 172v680c0 94.6 77.4 172 172 172h680c94.6 0 172-77.4 172-172v-680c0-94.6-77.4-172-172-172zM384 832h-128v-448h128v448zM320 320c-35.346 0-64-28.654-64-64s28.654-64 64-64 64 28.654 64 64-28.654 64-64 64zM832 832h-128v-256c0-35.346-28.654-64-64-64s-64 28.654-64 64v256h-128v-448h128v79.472c26.398-36.264 66.752-79.472 112-79.472 79.53 0 144 71.634 144 160v288z"></path>
     </symbol>
     </defs>
     </svg>
