Added OAH 2012 to experience

--- a/index.html
+++ b/index.html
@@ -159,12 +159,27 @@
           </li>
           <li><div class="vertical-dots"></div></li>
           <li>
+            <a href="http://www.hostnet.com.br/oah/">
+              <table>
+                <tr>
+                  <td><div class="round" style="background-image: url(img/experience/oah.jpg)"></div></td>
+                  <td>
+                    <h3>Winner of the Hostnet Algorithms Competition 2012 (OAH 2012)</h4>
+                    <em>Sep 2012</em>
+                    <p>Winner of the Olimpíada de Algoritmos Hostnet 2012, a national algorithms competition in Brazil, sponsored by a large web hosting company.</p>
+                  </td>
+                </tr>
+              </table>
+            </a>
+          </li>
+          <li><div class="vertical-dots"></div></li>
+          <li>
             <table>
               <tr>
                 <td><div class="round" style="background-image: url(img/experience/web-development.jpg)"></div></td>
                 <td>
                   <h3>Freelancer Web Developer</h4>
-                  <em>Jan 2011 - Oct 2012</em>
+                  <em>Jan 2011 - Sep 2012</em>
                   <p>Worked in a few small web development projects.</p>
                 </td>
               </tr>
