--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <span>90%</span>
         </div>
         <div class="center">
-          <h4>HTML5 / CSS3</h4>
+          <h4>HTML5 / CSS3 / JQUERY</h4>
           <div class="progress-bar" style="float: left">
             <div class="progress" style="width: 85%"></div>
           </div>
@@ -326,6 +326,21 @@
             <a href="/">
               <table>
                 <tr>
+                  <td><div class="round" style="background: url(img/portfolio/croak.jpg) top left; background-size: cover"></div></td>
+                  <td>
+                    <h3>Croak</h3>
+                    <em>Jul 2015</em>
+                    <p>Twitter clone written as a final project assignment for the lecture Webtechnologien II at the TU Dortmund.</p>
+                  </td>
+                </tr>
+              </table>
+            </a>
+          </li>
+
+          <li>
+            <a href="/">
+              <table>
+                <tr>
                   <td><div class="round" style="background-image: url(img/portfolio/arthurxavier.jpg)"></div></td>
                   <td>
                     <h3>Personal Website</h3>
@@ -341,7 +356,7 @@
             <a href="https://www.npmjs.com/package/diamond.js">
               <table>
                 <tr>
-                  <td><div class="round" style="background-image: url(img/portfolio/diamond.jpg)"></div></td>
+                  <td><div class="round" style="background: url(img/portfolio/diamond.jpg) top left; background-size: cover"></div></td>
                   <td>
                     <h3>diamond.js</h4>
                     <em>Aug 2014</em>
@@ -396,24 +411,25 @@
               </table>
             </a>
           </li>
+          <li><!-- FIX --></li>
         </ul>
       </div>
     </section>
 
-    <!-- IcoMoon icons -->
+    <!-- footer icons -->
     <svg display="none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
-    <symbol id="icon-mail" viewBox="0 0 1024 1024">
+    <symbol id="icon-mail" viewBox="0 0 24 24">
       <title>mail</title>
-      <path class="path1" d="M853.31 0h-682.62c-93.88 0-170.69 76.784-170.69 170.658v682.656c0 93.876 76.81 170.686 170.69 170.686h682.622c93.938 0 170.688-76.81 170.688-170.686v-682.656c0-93.874-76.75-170.658-170.69-170.658zM256 256h512c9.138 0 18.004 1.962 26.144 5.662l-282.144 329.168-282.144-329.17c8.14-3.696 17.006-5.66 26.144-5.66zM192 704v-384c0-1.34 0.056-2.672 0.14-4l187.664 218.94-185.598 185.6c-1.444-5.338-2.206-10.886-2.206-16.54zM768 768h-512c-5.654 0-11.202-0.762-16.54-2.206l182.118-182.118 90.422 105.496 90.424-105.494 182.116 182.118c-5.34 1.442-10.886 2.204-16.54 2.204zM832 704c0 5.654-0.762 11.2-2.206 16.54l-185.598-185.598 187.664-218.942c0.084 1.328 0.14 2.66 0.14 4v384z"></path>
+      <path d="M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z" />
     </symbol>
-    <symbol id="icon-facebook" viewBox="0 0 1024 1024">
+    <symbol id="icon-facebook" viewBox="0 0 24 24">
       <title>facebook</title>
-      <path class="path1" d="M853.344 0h-682.66c-93.872 0-170.684 76.814-170.684 170.688v682.626c0 93.938 76.812 170.686 170.684 170.686l682.66-0.002c93.876 0 170.656-76.746 170.656-170.688v-682.622c0-93.874-76.782-170.688-170.656-170.688zM870.592 512h-166.592v448h-192v-448h-92.526v-146.564h92.526v-95.186c0-129.342 55.792-206.25 207.87-206.25h175.244v158.57h-143.13c-42.482-0.070-47.752 22.152-47.752 63.512l-0.232 79.354h192l-25.408 146.564z"></path>
+      <path d="M19,4V7H17A1,1 0 0,0 16,8V10H19V13H16V20H13V13H11V10H13V7.5C13,5.56 14.57,4 16.5,4M20,2H4A2,2 0 0,0 2,4V20A2,2 0 0,0 4,22H20A2,2 0 0,0 22,20V4C22,2.89 21.1,2 20,2Z" />
     </symbol>
-    <symbol id="icon-github" viewBox="0 0 1024 1024">
+    <symbol id="icon-github" viewBox="0 0 24 24">
       <title>github</title>
-      <path class="path1" d="M0 556.41c0 46.398 4.34 88.38 13.022 125.934 8.678 37.554 20.696 70.184 36.052 97.892s34.884 52.078 58.586 73.108c23.7 21.032 49.406 38.224 77.112 51.576 27.706 13.35 59.336 24.198 94.888 32.546 35.552 8.346 71.856 14.188 108.91 17.528 37.054 3.338 77.78 5.006 122.178 5.006 44.732 0 85.628-1.668 122.68-5.006 37.054-3.34 73.442-9.184 109.16-17.528s67.512-19.192 95.388-32.546c27.876-13.354 53.746-30.544 77.616-51.576 23.87-21.030 43.566-45.404 59.086-73.108s27.622-60.336 36.302-97.892c8.68-37.556 13.020-79.536 13.020-125.934 0-82.788-27.708-154.394-83.118-214.816 3.004-8.012 5.758-17.108 8.262-27.29s4.84-24.702 7.010-43.564c2.17-18.862 1.336-40.642-2.504-65.346-3.838-24.704-10.932-49.906-21.284-75.612l-7.51-1.502c-5.342-1-14.106-0.75-26.29 0.752s-26.372 4.506-42.562 9.014c-16.19 4.506-37.054 13.186-62.592 26.038s-52.494 28.958-80.87 48.32c-48.736-13.352-115.668-20.030-200.792-20.030-84.792 0-151.556 6.678-200.294 20.030-28.376-19.362-55.5-35.468-81.37-48.32s-46.484-21.532-61.84-26.038c-15.354-4.508-29.71-7.428-43.062-8.764-13.354-1.336-21.784-1.752-25.288-1.252s-6.26 1.086-8.262 1.752c-10.348 25.706-17.442 50.906-21.28 75.612-3.838 24.704-4.674 46.486-2.504 65.346s4.508 33.382 7.010 43.564c2.504 10.182 5.258 19.278 8.262 27.29-55.414 60.422-83.122 132.026-83.122 214.816zM125.684 682.094c0-48.070 21.866-92.136 65.596-132.194 13.018-12.020 28.208-21.114 45.566-27.292 17.358-6.176 36.97-9.68 58.836-10.516 21.866-0.834 42.812-0.668 62.842 0.502 20.028 1.168 44.732 2.754 74.108 4.756 29.376 2.004 54.748 3.004 76.112 3.004 21.366 0 46.736-1 76.112-3.004 29.378-2.002 54.078-3.588 74.11-4.756 20.030-1.17 40.974-1.336 62.842-0.502 21.866 0.836 41.476 4.34 58.838 10.516 17.356 6.176 32.544 15.27 45.564 27.292 43.73 39.394 65.598 83.456 65.598 132.194 0 28.712-3.59 54.162-10.768 76.364-7.178 22.2-16.358 40.81-27.542 55.83s-26.704 27.79-46.568 38.306c-19.862 10.516-39.222 18.61-58.084 24.288-18.862 5.674-43.066 10.098-72.608 13.27-29.546 3.172-55.916 5.092-79.118 5.758-23.2 0.668-52.66 1.002-88.378 1.002s-65.178-0.334-88.378-1.002c-23.2-0.666-49.574-2.586-79.116-5.758s-53.744-7.596-72.606-13.27c-18.86-5.678-38.222-13.774-58.084-24.288s-35.386-23.282-46.568-38.306c-11.182-15.022-20.364-33.63-27.54-55.83-7.178-22.202-10.766-47.656-10.766-76.364zM640 672c0-53.019 28.654-96 64-96s64 42.981 64 96c0 53.019-28.654 96-64 96s-64-42.981-64-96zM256 672c0-53.019 28.654-96 64-96s64 42.981 64 96c0 53.019-28.654 96-64 96s-64-42.981-64-96z"></path>
+      <path d="M4,2H20A2,2 0 0,1 22,4V20A2,2 0 0,1 20,22H14.85C14.5,21.92 14.5,21.24 14.5,21V18.26C14.5,17.33 14.17,16.72 13.81,16.41C16.04,16.16 18.38,15.32 18.38,11.5C18.38,10.39 18,9.5 17.35,8.79C17.45,8.54 17.8,7.5 17.25,6.15C17.25,6.15 16.41,5.88 14.5,7.17C13.71,6.95 12.85,6.84 12,6.84C11.15,6.84 10.29,6.95 9.5,7.17C7.59,5.88 6.75,6.15 6.75,6.15C6.2,7.5 6.55,8.54 6.65,8.79C6,9.5 5.62,10.39 5.62,11.5C5.62,15.31 7.95,16.17 10.17,16.42C9.89,16.67 9.63,17.11 9.54,17.76C8.97,18 7.5,18.45 6.63,16.93C6.63,16.93 6.1,15.97 5.1,15.9C5.1,15.9 4.12,15.88 5,16.5C5,16.5 5.68,16.81 6.14,17.97C6.14,17.97 6.73,19.91 9.5,19.31V21C9.5,21.24 9.5,21.92 9.14,22H4A2,2 0 0,1 2,20V4A2,2 0 0,1 4,2Z" />
     </symbol>
     </defs>
     </svg>
