Fix link to Croak project in #portfolio.

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
         <ul>
           <li>
-            <a href="/">
+            <a href="https://github.com/arthur-xavier/croak">
               <table>
                 <tr>
                   <td><div class="round" style="background: url(img/portfolio/croak.jpg) top left; background-size: cover"></div></td>
